tests/golden/diagnostics/003_runtime_undefined_name.txt
E-NAME tests/golden/diagnostics/003_runtime_undefined_name.suay:1:1: runtime error: Undefined name 'x'
x
^
